cmake_minimum_required(VERSION 3.14)
project(Taller_TP3_Client)

set(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS -pthread)

FILE(GLOB CLIENT_SRCFILES client*.cpp)
FILE(GLOB SERVER_SRCFILES server*.cpp)
FILE(GLOB COMMON_SRCFILES common*.cpp)
ADD_EXECUTABLE(client ${CLIENT_SRCFILES} ${COMMON_SRCFILES})
ADD_EXECUTABLE(server ${SERVER_SRCFILES} ${COMMON_SRCFILES})